fix border align

--- a/src/app/modules/conference/components/CallingArea/style.css
+++ b/src/app/modules/conference/components/CallingArea/style.css
@@ -15,6 +15,5 @@
 }
 
 .calling-area-connections {
-  width: 80%;
-  height: 80%;
+  margin: 40px;
 }
